# fastapi-login

./: config.py  main.py  pyproject.toml
routes/login/: github.py  google.py
